# pharmacy_main

./: .gitignore  package.xml  setup.cfg  setup.py
launch/: pharmacy_system.launch.py
pharmacy_main/: detector.py  move_test.py  pharmacy_gui.py  pharmacy_manager.py  robot_arm.py  symptom_matcher.py  symptom_matcher_test.py  symptom_subscriber_test.py  vector_DB.py  voice_and_match_test.py  voice_input.py
pharmacy_main/robot_control/: onrobot.py
resource/: T_gripper2camera.npy  class_name copy.json  class_name.json  drug_symptom_mapping.txt  symptom_query.txt
resource/chroma_db/: chroma.sqlite3
